--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,10 +1,12 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/jingsai/jingsai",
     "pages/xueshu/xueshu",
     "pages/mine/mine",
-    "pages/user/user",
-    "pages/jingsai/jingsai"
+    "pages/zhuzuo/zhuzuo",
+    "pages/biaozhang/biaozhang",
+    "pages/user/user"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
