--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,14 @@
 {
   "pages": [
+    "pages/mine/mine",
     "pages/index/index",
     "pages/jingsai/jingsai",
     "pages/xueshu/xueshu",
-    "pages/mine/mine",
     "pages/zhuzuo/zhuzuo",
     "pages/biaozhang/biaozhang",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/keyan/keyan",
+    "pages/xiangmu/xiangmu"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
